# wordle_cli

./: .gitignore  README.md  pyproject.toml  words.py
.claude/: gsd-file-manifest.json
.claude/agents/: gsd-codebase-mapper.md  gsd-debugger.md  gsd-executor.md  gsd-integration-checker.md  gsd-nyquist-auditor.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-verifier.md
.codex/: config.toml  gsd-file-manifest.json
.codex/agents/: gsd-codebase-mapper.md  gsd-codebase-mapper.toml  gsd-debugger.md  gsd-debugger.toml  gsd-executor.md  gsd-executor.toml  gsd-integration-checker.md  gsd-integration-checker.toml  gsd-nyquist-auditor.md  gsd-nyquist-auditor.toml  gsd-phase-researcher.md  gsd-phase-researcher.toml  gsd-plan-checker.md  gsd-plan-checker.toml  gsd-planner.md  gsd-planner.toml  gsd-project-researcher.md  gsd-project-researcher.toml  gsd-research-synthesizer.md  gsd-research-synthesizer.toml  gsd-roadmapper.md  gsd-roadmapper.toml  gsd-verifier.md  gsd-verifier.toml
.gemini/: gsd-file-manifest.json  settings.json
.gemini/agents/: gsd-codebase-mapper.md  gsd-debugger.md  gsd-executor.md  gsd-integration-checker.md  gsd-nyquist-auditor.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-verifier.md
.gemini/hooks/: gsd-check-update.js  (+1 more)
.opencode/: gsd-file-manifest.json  opencode.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
(+279 files in other folders)
